# fastapi-ai-sdk

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYTHON_VERSION_UPDATE.md  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: advanced_ai_assistant.py  llm_integration.py  simple_chat.py
examples/frontend/: ChatComponent.tsx
fastapi_ai_sdk/: __init__.py  decorators.py  models.py  response.py  stream.py
tests/: __init__.py  test_fastapi_integration.py  test_models.py  test_stream.py
